# xor-bip39

./: Cargo.toml  README.md  main.rs  shell.nix  xor.rs
src/: lib.rs  main.rs
