[package]
name = "xor-bip39"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.20"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.132"

[[bin]]
name = "xor-bip39"
path = "main.rs"
